Fix TLS finalmente - Testes ate 103 OK